--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,13 +2,18 @@
   "routes": [
     {
       "route": "/binary-search",
-      "serve": "/binary-search.html",
       "statusCode": 200
     },
     {
       "route": "/*",
-      "serve": "/index.html",
       "statusCode": 200
     }
-  ]
+  ],
+  "navigationFallback": {
+    "rewrite": "index.html",
+    "exclude": ["*.{svg,png,jpg,gif}","*.{css,scss}","*.js"]
+  },
+  "mimeTypes": {
+    ".json": "text/json"
+  }
 }
