--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.2",
+    "prism-themes": "^1.9.0",
+    "prismjs": "^1.29.0",
     "programming-languages-logos": "^0.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
